@@ -61,6 +61,9 @@ Patroklos Argyroudis <argp@cs.tcd.ie>
 Simon Ernst <se@netmute.org>
         elvi: archpkg
 
+Ivy Foster <joyfulgirl@archlinux.us>
+        elvi: bookfinder, bugmenot
+        plus patches
 
 OTHER CONTRIBUTORS
 
