@@ -1,3 +1,7 @@
+2010-02-22  Ivy Foster  <joyfulgirl@archlinux.us>
+
+	* Added `-ns|-newscreen' switch for setting $SURFRAW_new_screen.
+
 2010-02-15  James Rowe  <jnrowe@gmail.com>
 
 	* elvi/imdb: Fixes for upstream search changes.  Thanks to Sadako.
